--- a/switch语句练习.html
+++ b/switch语句练习.html
@@ -38,13 +38,27 @@
   }*/
  /* TODO for语句的练习
  *  1到100所有整数奇数之和*/
-  var sum = 0;
+  /*var sum = 0;
   for (var num = 1;num <= 100;num++){
     if (num%2==1){
       sum = sum + num;
     }
   }
-  console.log(sum);
+  console.log(sum);*/
+
+
+ /* es6  for...of循环
+   表达式
+    for(let value of target){ }  循环遍历
+          1 遍历数组
+          2 遍历set
+          3 遍历map
+          4 遍历字符串
+          5 遍历伪数组*/
+
+
+
+
 
 
 </script>
